# openmso5202D

./: .gitignore  70-mso5202d.rules  Cargo.toml  MSO5202D-investigation.md  MSO5202D-protocol.md  README.md  mso5202d.py  mso5202d_plot.py  package.json  pnpm-lock.yaml  setup_debug.sh
backend/: Cargo.toml
backend/src/: error.rs  lib.rs  logging.rs  scope.rs  waveform.rs
backend/src/control/: capture.rs  converge.rs  csv.rs  mod.rs  ops.rs  progress.rs  trigger.rs
backend/src/decoder/: common.rs  i2c.rs  mod.rs  spi.rs  uart.rs
backend/src/device/: files.rs  keys.rs  mod.rs  screen.rs  shell.rs
backend/src/protocol/: mod.rs
backend/src/settings/: mod.rs  tables.rs
backend/src/usb/: mod.rs  transport.rs
backend/tests/: card_shell_roundtrip.rs  control.rs  decoder.rs  decoder_corpus.rs  decoder_scores.json  decoder_scores_triggered.json  decoder_triggered.rs  device.rs  hardware.rs  link_recovers_from_stale_frames.rs  parse_real_export.rs  protocol.rs  settings.rs  waveform.rs
captures/: mso5202d-2ch-readout.pcapng  mso5202d-autoset.pcapng  mso5202d-ch2-vdiv.pcapng  mso5202d-display.pcapng  mso5202d-horiz-position.pcapng  mso5202d-la-d15-d8.pcapng  mso5202d-la-threshold.pcapng  mso5202d-measure.pcapng  mso5202d-session1.pcapng  mso5202d-timediv.pcapng  mso5202d-trig-alter-ch2.pcapng  mso5202d-trig-edge.pcapng  mso5202d-trig-knob.pcapng  mso5202d-trig-level.pcapng  mso5202d-trig-overtime.pcapng  mso5202d-trig-runstop.pcapng  mso5202d-trig-video.pcapng  mso5202d-utility.pcapng
captures/control/: mso5202d_control_LA.pcapng  mso5202d_control_acquire.pcapng  mso5202d_control_display.pcapng  mso5202d_control_measurements.pcapng  mso5202d_control_vertical_math.pcapng
docs/: MSO5202D-investigation.md  MSO5202D-protocol.md  MSO5202D-rendering.md  MSO5202D-statemachines.md  backend.md  decoders.md  frontend.md
docs/diagrams/: backend-layers.drawio  capture-statemachine.drawio  decoder-pipeline.drawio  frontend-state.drawio  i2c-decode.drawio  spi-decode.drawio  system-architecture.drawio  trigger-menu-navigation.drawio  uart-decode.drawio  usb-transaction.drawio
frontend/: index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  api.ts  main.ts  settings.ts  styles.css  theme.css  theme.ts  timebase.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: make-icons.py
frontend/src-tauri/packaging/: postinstall.sh
frontend/src-tauri/src/: api.rs  lib.rs  main.rs
frontend/src-tauri/tests/: prepare_applies_trigger.rs
frontend/src/components/: ByteList.tsx  CardFiles.tsx  ChannelSetup.tsx  ControlPanel.tsx  FilesDialog.tsx  LoadCsv.tsx  Modal.tsx  Section.tsx  TriggerPanel.tsx  WaveformView.tsx
scope_dump/captures_wireshark/: mso5202d-acquire-1m.pcapng  mso5202d-acquire.pcapng  mso5202d-ch1-menu.pcapng  mso5202d-ch1-vdiv.pcapng  mso5202d-ch1-vpos.pcapng  mso5202d-ch2-menu.pcapng  mso5202d-combined.pcapng  mso5202d-cursor.pcapng  mso5202d-horiz-menu.pcapng  mso5202d-la-d7-d0.pcapng  mso5202d-math.pcapng  mso5202d-pos-knob-push.pcapng  mso5202d-session2.pcapng  mso5202d-trig-alter-ch1.pcapng  mso5202d-trig-buttons.pcapng  mso5202d-trig-holdoff.pcapng  mso5202d-trig-pulse.pcapng  mso5202d-trig-slope.pcapng  mso5202d-trig-type.pcapng
scope_dump/captures_wireshark/control/: mso5202d_control_horizontal.pcapng  mso5202d_control_interval_scope_settings.pcapng  (+3 more)
scripts/: capture_corpus.py  mso5202d.py  mso5202d_capture.py  mso5202d_decode.py  mso5202d_espgen.py  mso5202d_espgui.py  mso5202d_plot.py  mso5202d_probe.py  mso5202d_screenpick.py  mso5202d_shell.py  serial_decode.py  tune_transact.py
scripts/decoding/: __init__.py  common.py  decode_corpus.py  i2c.py  selftest.py  spi.py  uart.py
scripts/esp_combo_gen/: .clang-format  README.md  platformio.ini
scripts/esp_i2c_gen/: README.md  platformio.ini
scripts/esp_spi_gen/: README.md  platformio.ini
scripts/esp_toggler/: README.md  platformio.ini
scripts/esp_uart_gen/: README.md  platformio.ini
(+115 files in other folders)
