# Cargo workspace root for openmso5202D.
#
#   backend            -> `mso5202d` reusable driver library + `playground` binary
#   frontend/src-tauri -> the Tauri desktop app (depends on `mso5202d`)
#
# One shared target/ dir and one lockfile keeps the backend crate and the Tauri
# app on the same dependency graph.
[workspace]
resolver = "2"
members = [
    "backend",
    "frontend/src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/alexmuraru27/openmso5202D"

# Optimise dependencies even in dev so USB throughput (waveform decode) is usable
# while iterating; our own crates stay unoptimised for fast rebuilds.
[profile.dev.package."*"]
opt-level = 2
