[package]
name = "openmso5202d"
description = "openmso5202D — Tauri desktop app for the Hantek MSO5202D oscilloscope"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

# The Tauri app is a library (the desktop shell links it) plus a thin binary entry point.
[lib]
name = "openmso5202d_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# The driver, bridged to the UI through the backend-API layer in `src/api.rs`.
mso5202d = { path = "../../backend" }
